crates/marxml/tests/snapshots/fixture_suite__fixture_parse_failure@09-tag-not-terminated.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: "format!(\"{}: {}\", error_kind(&err), err)"
input_file: crates/marxml/tests/fixtures/parse_fail/09-tag-not-terminated.md
---
MalformedTag: line 1: malformed tag — <task> not terminated
