crates/marxml/tests/snapshots/fixture_suite__fixture_parse_success@03-single-tag.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: dump_doc(&doc)
input_file: crates/marxml/tests/fixtures/parse/03-single-tag.md
---
root_count = 1
root[0]:
  <task>  @ L1:O0 -> L1:O21
    content="do thing"
