crates/marxml/tests/snapshots/fixture_suite__fixture_parse_success@09-unicode.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: dump_doc(&doc)
input_file: crates/marxml/tests/fixtures/parse/09-unicode.md
---
root_count = 1
root[0]:
  <note title="日本語" author="café">  @ L1:O0 -> L1:O77
    content="héllo 🎉 — naïve résumé"
