crates/marxml/tests/snapshots/fixture_suite__fixture_parse_success@10-multiline-attr.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: dump_doc(&doc)
input_file: crates/marxml/tests/fixtures/parse/10-multiline-attr.md
---
root_count = 1
root[0]:
  <task summary="line one\nline two\nline three">  @ L1:O0 -> L3:O56
    content="body"
