crates/marxml/tests/snapshots/fixture_suite__fixture_parse_success@11-hyphen-and-underscore-names.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: dump_doc(&doc)
input_file: crates/marxml/tests/fixtures/parse/11-hyphen-and-underscore-names.md
---
root_count = 1
root[0]:
  <my-task data-id="42" my_attr="x" data-status_v2="todo" />  @ L1:O0 -> L1:O57
